--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,11 @@
             <artifactId>jsoup</artifactId>
             <version>1.12.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>42.2.20</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
