--- a/src/main/resources/app.properties
+++ b/src/main/resources/app.properties
@@ -4,3 +4,4 @@ url:jdbc:postgresql://localhost:5432/post
 username:postgres
 password:password
 link:https://www.sql.ru/forum/job-offers/
+port:9000
